installed local versio of grunt

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "wordpress"
   ],
   "author": "Thomas Dodson",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "grunt-cli": "^1.2.0"
+  }
 }
