--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   "license": "ISC",
   "dependencies": {
     "grunt-cli": "^1.2.0"
+  },
+  "devDependencies": {
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
