--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   },
   "devDependencies": {
     "grunt-autoprefixer": "^3.0.4",
-    "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-uglify": "^3.1.0"
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^3.1.0",
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
